[package]
name = "profoundly-gay-greeter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
eyre = "0.6.8"

crossterm = "0.25.0"
inquire = { version = "0.5.2", features = ["editor"] }
regex = "1.7.0"
reqwest = { version = "0.11.13", default-features = false, features = ["gzip", "rustls-tls", "blocking"] }
